--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">Sum Twitter</string>
+
+    <string name="hello_list_fragment">Hello List Fragment</string>
+    <string name="hello_map_fragment">Hello Map Fragment</string>
+    <string name="list_label">List</string>
+    <string name="map_label">Map</string>
 </resources>
